test/files/neg/t5803.scala
object Test {
  class Foo()(implicit ev: Nothing)
  new Foo(): String
}
