test/files/neg/t5803.check
t5803.scala:3: error: implicit error;
!I ev: Nothing
  new Foo(): String
  ^
1 error
